--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
+
    
   <!-- Font Awesome Link -->
   <link
@@ -17,13 +18,19 @@
   integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
   crossorigin="anonymous"
 />
+<link
+rel="stylesheet"
+href="./src/index.css"
+/>
 
     
   </head>
   <body     style="width: 100%; height: 100%;"
+  class="no-scroll-bar"
   >
     <div id="root"
     style="width: 100%; height: 100%;"
+    class="no-scroll-bar"
    
     ></div>
     <script src="node_modules/@material-tailwind/html@latest/scripts/ripple.js"></script>
