--- a/client/index.html
+++ b/client/index.html
@@ -1,40 +1,41 @@
 <!doctype html>
-<html lang="en"  data-theme="fantasy">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SalesSql</title>
-    <link
+<html lang="en" data-theme="fantasy">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SalesSql</title>
+  <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
 
-   
   <!-- Font Awesome Link -->
   <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-  integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-  crossorigin="anonymous"
-/>
-<link
-rel="stylesheet"
-href="./src/index.css"
-/>
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous"
+  />
 
-    
-  </head>
-  <body     style="width: 100%; height: 100%;"
-  class="no-scroll-bar"
-  >
-    <div id="root"
-    style="width: 100%; height: 100%;"
-    class="no-scroll-bar"
-   
-    ></div>
-    <script src="node_modules/@material-tailwind/html@latest/scripts/ripple.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
-    
-  </body>
+  <style>
+    .no-scroll-bar::-webkit-scrollbar {
+      display: none;
+      overflow: hidden;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scroll-bar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+      overflow: hidden;
+
+    }
+  </style>
+</head>
+<body style="width: 100%; height: 100%;" class="no-scroll-bar">
+  <div id="root" style="width: 100%; height: 100%;" class="no-scroll-bar"></div>
+  <script src="node_modules/@material-tailwind/html@latest/scripts/ripple.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
