--- a/client/index.html
+++ b/client/index.html
@@ -5,34 +5,23 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SalesSql</title>
-  <link
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"
-  />
-
-  <!-- Font Awesome Link -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-    crossorigin="anonymous"
-  />
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+  
   <style>
     .no-scroll-bar::-webkit-scrollbar {
-      display: none;
+      display: none; /* Hide scrollbar for Webkit browsers */
     }
 
-    /* Hide scrollbar for IE, Edge and Firefox */
     .no-scroll-bar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-
+   
+      -ms-overflow-style: none; /* Hides scrollbar in IE and Edge */
+      scrollbar-width: none; /* Hides scrollbar in Firefox */
     }
   </style>
 </head>
-<body style="width: 100%; height: 100%;" class="no-scroll-bar">
-  <div id="root" style="width: 100%; height: 100%;" class="no-scroll-bar"></div>
+<body  class="no-scroll-bar" style="height: 100vh; overflow: hidden;">
+  <div id="root" class="no-scroll-bar"  style="height: 100vh; overflow: hidden;"></div>
   <script src="node_modules/@material-tailwind/html@latest/scripts/ripple.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
